--- a/config/mysql.yml
+++ b/config/mysql.yml
@@ -3,8 +3,8 @@ mysql:
   config:
     host: "127.0.0.1"
     port: 3306
-    user: "root"
-    password: "Fanfanbh.89757"
+    user: ""
+    password: ""
     database: "jeecg-boot"
 
   parameters:
