add feature of connect mysql

--- a/config/mysql.yml
+++ b/config/mysql.yml
@@ -3,8 +3,8 @@ mysql:
   config:
     host: "127.0.0.1"
     port: 3306
-    user: ""
-    password: ""
+    user: "Lennon"
+    password: "123456"
     database: "jeecg-boot"
 
   parameters:
